deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barista-gke
  labels:
    app: barista
spec:
  selector:
    matchLabels:
      app: barista
  replicas: 2
  template:
    metadata:
      labels:
        app: barista
    spec:
      containers:
        - name: barista-gke
          image: eu.gcr.io/coficiando/barista-gke:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: barista-gke
spec:
  selector:
    app: barista
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
