service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "barista-gke"
spec:
  type: "NodePort"
  selector:
    app: "barista"
  ports:
    - port: 443
      targetPort: 8080
